--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1>Javahome App - 0.0.3</h1>
+  <h1>Javahome App - 0.0.3 deployed through ansible</h1>
 </div>
 
 </body>
